--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.Input{
+    @apply py-2 px-3 outline-none rounded-md bg-white border-[#D4D4D4] text-[#333] border
+}
+.btn{
+    @apply py-2 px-5 text-white rounded-full cursor-pointer bg-primary
+}
+.btn_secondary{
+    @apply py-2 px-5 text-primary border border-primary rounded-md cursor-pointer bg-transparent
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.header_banner{
+    background: url("../public/bg-carbon@2x.jpg");background-size: cover;background-position: center;position: relative;
+}
+.header_banner::before{
+    background-color: rgba(0, 0, 0, 0.37);
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;top: 0;
+    width: 100%;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .Flex{
+    @apply flex items-center justify-center;
   }
-}
+
+  .input{
+    @apply bg-slate-200 py-2 px-3 rounded-full w-full text-[#333]
+  }
+
+  @layer utilities{
+    .bg_color{
+      @apply bg-gradient-to-r from-gray-300/80 to-gray-100
+    }
+  }
